<resources>
    <string name="app_name">MotorTECApp</string>
    <string name="tab_text_1">Autos Nuevos</string>
    <string name="tab_text_2">Autos Usados</string>
    <string name="action_change_concessionaire">Cambiar concesionario</string>
    <string name="fragmentDialog">Seleccione el concesionario</string>
    <string name="fragmentDialogOk">OK</string>
    <string name="action_change_user">Cambiar usuario</string>
    <string name="add_car">Nuevo Auto</string>
    <string name="connect_error">No tienes conexión a internet</string>
    <string name="exitMessage">Presiona dos veces para salir</string>
    <string name="tvRegisterActivityName">Ingrese su nombre</string>
    <string name="tvRegisterActivityLastName">Ingrese sus apellidos</string>
    <string name="tvRegisterActivityId">Ingrese su cédula</string>
    <string name="tvRegisterActivityPhone">Ingrese su teléfono</string>
    <string name="tvRegisterActivityEmail">Ingrese su correo electrónico</string>
    <string name="btnRegisterActivitySubmit">Continuar con su registro</string>
    <string name="tvRegister2ActivityCountry">Seleccione su país</string>
    <string name="tvRegister2ActivityProvince">Seleccione su provincia</string>
    <string name="tvRegister2ActivityCanton">Seleccione su canton</string>
    <string name="tvRegister2ActivityDistrict">Seleccione su distrito</string>
    <string name="btnRegister2ActivitySubmit">Finalizar Registro</string>
    <string name="Register2ActivityError">Debes llenar todos los campos</string>
    <string name="etRegister2ActivityHint">Ingresa descripción</string>
    <string name="Register2ActivitySuccess">Registrado Correctamente</string>
    <string name="Register2ActivityFailed">No es posible registrar intentelo de nuevo</string>
    <string name="tvCs">Seleccione el concesionario</string>
    <string name="btnCs">Continuar</string>
    <string name="CsActivityError">Debe seleccionar un concesionario</string>
    <string name="PurchaseActivityLogInMsg">Necesita registrarse</string>
    <string name="PurchaseActivityMatricula">Matricula: </string>
    <string name="PurchaseActivityModelo">Modelo: </string>
    <string name="PurchaseActivityColor">Color: </string>
    <string name="PurchaseActivityKilometraje">Kilometraje: </string>
    <string name="PurchaseActivityMarca">Marca: </string>
    <string name="PurchaseActivityEditTextHint">Ingrese el precio final</string>
    <string name="PurchaseActivityBuy">Comprar</string>
    <string name="PurchaseActivitySendBuy">Confirmar Comprar</string>
    <string name="PurchaseActivityNotMatricula">Sin registrar</string>
    <string name="SellActivityErrorPrice">Debe ingresar un precio</string>
    <string name="SellActivityPriceNumberError">Debe numero para el precio</string>
    <string name="SellActivityOK">Compra realizada con éxito</string>
    <string name="SellActivityConnectionError">Error en la conexión, intenelo de nuevo</string>
    <string name="BuyActivitySpinnerTextView">Seleccione el concesionario</string>
    <string name="BuyActivityButton">Vender</string>
    <string name="BuyAActivityEditTextPrice">Ingrese el precio</string>
    <string name="BuyAActivityEditTextMatricula">Ingrese el precio</string>
    <string name="BuyActivityOK">Compra realizada con éxito</string>
    <string name="BuyActivityConnectionError">Error en la conexión, intenelo de nuevo</string>
    <string name="LogInActivityMsg">Ingrese la cédula del cliente a buscar</string>
    <string name="LogInActivityEditTextHint">Cédula</string>
    <string name="LogInActivityBtn">Buscar cliente</string>
    <string name="LogInActivityOk">Cliente encontrado y cambiado</string>
    <string name="LogInActivityConnectionError">Cliente no encontrado, intenelo de nuevo</string>
    <string name="addCarMatricula">Ingrese matricula</string>
    <string name="addCarModelo">Ingrese modelo</string>
    <string name="addCarColor">Ingrese color</string>
    <string name="addCarKilometraje">Ingrese kilometraje</string>
    <string name="addCarCs">Ingrese concesionario</string>
    <string name="addCarMarca">Ingrese la marca</string>
    <string name="addCarLink">Ingrese un link de la imagen del carro</string>
    <string name="addCarPrice">Ingrese el precio</string>
    <string name="addCarBtn">Enviar</string>
    <string name="addCarActivityOk">Carro registrado</string>
    <string name="addCarActivityConnectionError">Carro no registrado, intenelo de nuevo</string>
</resources>
