<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarActivity">

    <EditText
        android:id="@+id/etAddMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addCarMatricula"/>

    <EditText
        android:id="@+id/etAddModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addCarModelo"
        android:layout_below="@id/etAddMatricula"/>

    <EditText
        android:id="@+id/etAddColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/addCarColor"
        android:layout_below="@id/etAddModelo"/>

    <EditText
        android:id="@+id/etAddKilometraje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddColor"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/addCarKilometraje"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etAddPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddKilometraje"
        android:hint="@string/addCarPrice"
        android:inputType="number"/>

    <TextView
        android:id="@+id/tvCs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddPrice"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:text="@string/addCarCs" />

    <Spinner
        android:id="@+id/spAddCs"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCs"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp" />

    <TextView
        android:id="@+id/tvAddMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spAddCs"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:text="@string/addCarMarca" />

    <Spinner
        android:id="@+id/spAddMarca"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddMarca"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/etAddLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spAddMarca"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:hint="@string/addCarLink" />

    <Button
        android:id="@+id/btnAddCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAddLink"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="1dp"
        android:hint="@string/addCarBtn"/>

</RelativeLayout>