<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register1Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterActivityName"/>

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:paddingTop="10dp"
        android:textColorHighlight="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterActivityLastName"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/edLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:paddingTop="10dp"
        android:textColorHighlight="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterActivityId"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/edID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:paddingTop="10dp"
        android:textColorHighlight="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterActivityPhone"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:paddingTop="10dp"
        android:textColorHighlight="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRegisterActivityEmail"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegisterActivitySubmit"/>


</LinearLayout>